<resources>
    <string name="app_name">Clinica Hands6</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_insert">Novo</string>
    <string name="menu_pacientes">Pacientes</string>
    <string name="menu_medicos">Médicos</string>
</resources>